--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,10 +79,12 @@ dependencies {
 
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'com.github.mik3y:usb-serial-for-android:3.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     constraints {
         implementation('androidx.work:work-runtime:2.7.1')
     }
 
     implementation 'com.github.MarcinOrlowski:fonty:3.1.5'
+
 }
